<resources>
    <string name="app_name">City Guide App</string>
    <string name="logo_name">Find Your Way</string>
    <string name="slogan_name">We will help you to find your way! </string>
    <string name="powered_by">Powered by devPro Inc </string>


    <!-- Strings for onbaording  -->

    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make a Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit back and enjoy</string>

    <!--    Description -->
    <string name="first_slide_desc">You can search any place nearby or within the specified city. We will display specific or all related locations</string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us.Yoou can perform</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you don\'t have to worry</string>

    <!--    Buttons  -->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

<!--    Strings for Dashboard -->

<!--    Categories -->
<string name="hotels">Hotels</string>
<string name="restaurants">Restaurants</string>
<string name="shops">Shops</string>
<string name="airports">Airports</string>


<!--    Titles and Descriptions -->
    <string name="featured_locations">All Featured Locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>
    <string name="banks">BANKS</string>
    <string name="education">SCHOOLS</string>
    <string name="shop">SHOP</string>
    <string name="share">SHARE</string>
    <string name="rate_us">RATE US</string>
</resources>