<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   tools:openDrawer="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.UserDashboard">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightWhite"
        app:headerLayout="@layout/menu_header"
        app:theme="@style/ThemeOverlay.AppCompat.navTheme"
        app:menu="@menu/drawer_menu"
        android:layout_gravity="start" />

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:background="@color/home_background"
        android:orientation="vertical"
        android:layout_height="match_parent">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginHorizontal="15dp"
        >

        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
             android:layout_marginTop="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/menu" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="5dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/card_4"
            app:srcCompat="@drawable/add_new_place" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logo_name"
                    android:textSize="28sp"
                    android:layout_centerHorizontal="true" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_below="@id/app_name"
                    android:background="@color/white"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="38dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:elevation="8dp"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_text"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="15dp" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:src="@drawable/search_icon" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="1dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:background="@drawable/card_1"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/restaurant_icon"
                            />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:text="@string/restaurants" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:background="@drawable/card_2"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/account_balance"
                            />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:text="@string/hotels" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="5dp"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:background="@drawable/card_3"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/airplane_icon"
                            />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:text="@string/airports" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:background="@drawable/card_4"
                        android:elevation="8dp"
                        android:layout_margin="10dp"
                        android:layout_height="60dp">
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/shop_icon"
                            />



                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textAlignment="center"
                        android:text="@string/shops" />

                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@color/banner_background_light"
                android:layout_marginTop="20dp">


                <LinearLayout
                    android:id="@+id/featured_background"
                    android:layout_width="170dp"
                    android:layout_height="280dp"
                    android:background="@color/banner_background"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured_locations"
                        android:textSize="20sp"
                        android:fontFamily="@font/baloo"
                        android:layout_marginLeft="10dp"
                        android:textColor="@color/colorAccent"
                        android:layout_marginTop="40dp"
                        android:textAllCaps="true"



                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"

                        android:text="@string/featured_locations_description"
                        />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/featured_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_toRightOf="@id/featured_background"
                    android:background="@color/home_background" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/most_viewed_locations"
                        android:fontFamily="@font/baloo"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:fontFamily="@font/baloo"
                        android:text="@string/view_all"
                        android:textColor="@color/black"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"

                        />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostviewed_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/categories"
                        android:fontFamily="@font/baloo"
                        android:textSize="16sp"
                        android:textColor="@color/colorAccent"
                       />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/view_all"
                        android:fontFamily="@font/baloo"
                        android:textSize="16sp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"

                        />

                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/category_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="120dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>